--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "react-ssr-demo",
   "main": "app.js",
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./src/index.js"
   },
   "keywords": [],
   "author": "garen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "react": "^16.9.0"
   }
 }
