--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "react-ssr-demo",
   "main": "app.js",
   "scripts": {
-    "start": "node ./build/bundle.js"
+    "start": "node ./build/bundle.js",
+    "build": "webpack --config webpack.server.js"
   },
   "keywords": [],
   "author": "garen",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "react": "^16.9.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
