--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "react-ssr-demo",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon --watch ./build --exec node ./build/bundle.js",
-    "build": "webpack --config webpack.server.js --watch"
+    "dev": "npm-run-all --parallel dev:**",
+    "dev:start": "nodemon --watch ./build --exec node ./build/bundle.js",
+    "dev:build": "webpack --config webpack.server.js --watch"
   },
   "keywords": [],
   "author": "garen",
