--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "garen",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
