--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "css-loader": "^3.2.0",
+    "isomorphic-style-loader": "^5.1.0",
     "nodemon": "^1.19.1",
+    "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7",
     "webpack-merge": "^4.2.2",
